highlight the active table

--- a/static/style.css
+++ b/static/style.css
@@ -119,6 +119,9 @@ textarea {
     font-size: 18px;
     text-align: center;
 }
+.nav-group-item.active{
+    background-color: #ddd;
+}
 
 
 #banner{
