--- a/static/style.css
+++ b/static/style.css
@@ -436,6 +436,11 @@ a.primary-link {
     padding: 0 5px;
 }
 
+.window-filter{
+    display: flex;
+    padding: 0 5px;
+}
+
 .filter-value{
     height: 20px;
     border-color: #aaa;
@@ -543,6 +548,7 @@ a.primary-link {
 .grouped-window-list {
     overflow-y: auto;
     -webkit-overflow-scrolling: touch;
+    padding: 10px 5px;
 }
 
 .main-tab-selected {
