--- a/static/style.css
+++ b/static/style.css
@@ -680,8 +680,9 @@ button.sidebar-control {
  * on its place, at the cost of being overlapped by the details div, which makes it not looked like a dropdown
  *
  * TODO: see if it can be mitiated using this technique here: https://css-tricks.com/popping-hidden-overflow/
+ * TODO: when adding overflow:auto the scrolling and the items are not overlapped,
+ *  however the dropdown will be shown bellow overlapped by the details as well.
  */
-/*
 .dropdown-display-wrapper{
     position: relative;
     display: inline-block;
@@ -689,7 +690,6 @@ button.sidebar-control {
 .dropdown-display {
     position: relative;
 }
-*/
 
 .dropdown-select {
     position: absolute;
