--- a/static/style.css
+++ b/static/style.css
@@ -4,7 +4,7 @@
     -webkit-user-select: none;
 }
 
-input, label, a{
+input:not([type='checkbox']), label, a{
     user-select: text;
     -webkit-user-select: text;
     outline: 0;
@@ -167,6 +167,7 @@ textarea {
     border-color: #ccc;
 }
 
+
 .card-field-value textarea {
     border-width: 1px 1px 1px 1px;
     border-style: solid;
@@ -202,15 +203,15 @@ textarea {
     line-height: 30px;
 }
 
-.tab-row-value input
- {
+.tab-row-value input {
     border-width: 0 0 1px 0;
     border-style: solid;
     border-color: #ccc;
     height: 30px;
 }
-.tab-row-value  select
- {
+
+
+.tab-row-value  select {
     border-width: 0 0 1px 0;
     -webkit-border-width: 0;
     border-style: solid;
@@ -576,6 +577,7 @@ button.sidebar-control {
     padding: 0;
     border: 0;
     background: transparent;
+    outline: 0;
 }
 
 .main-tab-selected {
@@ -1100,12 +1102,11 @@ button.sidebar-control {
     }
 }
 
-.window-and-selected-row{
-}
 
 .detailed-selected-row {
     position: absolute;
     background-color: #f5f5f4;
+    right: 10px;
 }
 
 .detailed-selected-row--shadow{
