--- a/static/style.css
+++ b/static/style.css
@@ -4,13 +4,14 @@
     -webkit-user-select: none;
 }
 
-input:not([type='checkbox']), label, a{
+input, label, a{
     user-select: text;
     -webkit-user-select: text;
     outline: 0;
     margin: 0;
-    -webkit-appearance: none; 
+    /*-webkit-appearance: none; */
 }
+
 
 body {
     padding: 0;
