--- a/static/style.css
+++ b/static/style.css
@@ -426,7 +426,7 @@ a.primary-link {
 .tab-list-view {
     display: inline-block;
     border: 1px solid #ccc;
-    margin: 10px 20px 0 20px;
+    margin: 10px 10px 0 20px;
 }
 
 .list-view-rows {
@@ -731,7 +731,7 @@ button.sidebar-control {
 .toolbar-area {
     display:flex;
     /*overflow-x: auto;*/
-    padding: 50px 0 10px 0;
+    padding: 20px 0 10px 0;
     margin-left: 20px;
     background-color: #f5f5f4;
 }
@@ -739,7 +739,7 @@ button.sidebar-control {
     position: absolute;
     top: 0;
     right: 0;
-    margin-right: -5px;
+    margin-right: 10px;
     margin-top: -8px;
     display: flex;
 }
@@ -1019,7 +1019,8 @@ button.sidebar-control {
  * container, part of the tooltip obstucted, z-index didn't help
  */
 .tooltip .tooltip-text {
-    margin-top: -40px;
+    margin-top: 50px;
+    margin-left: 40px;
     /*display: none;*/
     visibility: hidden;
     background-color: black;
